<resources>
    <string name="app_name">Nimble</string>
    <string name="arrow_icon_desc">Next</string>
    <string name="error_login">An error occurred during login. Please try again.</string>
    <string name="error_main">An error occurred during loading surveys. Please try again.</string>
    <string name="error_detail">An error occurred during loading the survey.</string>
    <string name="str_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="question_example">How fulfilled did you feel during this WFH period?</string>
    <string name="exit_warning">Are you sure you want to exit the survey?</string>
    <string name="exit_logout">Are you sure you want to logout?</string>
    <string name="str_start_survey">Start Survey</string>
    <string name="str_lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="str_lorem_ipsum_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
    <string name="str_thanks_survey">Thanks for taking the survey.</string>
    <string name="nav_header_desc"></string>
    <string name="nav_header_title">Mai</string>
    <string name="menu_logout">Logout</string>
    <string name="str_reset_msg">Enter your email to receive instructions for resetting your password.</string>
    <string name="str_reset">Reset</string>
    <string name="str_forgot">Forgot?</string>
    <string name="password_recovery">Check your email</string>

</resources>